# partypy_tt

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.md  installation.md  usage.ipynb
src/partypy_tt/: plotting.py  simulate.py
tests/: test_partypy_tt.py
