[tool.poetry]
name = "partypy_tt"
version = "0.1.0"
description = "Simulate attendance at your party!"
authors = ["Tiffany Timbers"]
license = "MIT"
readme = "README.md"
documentation = "https://partypy_tt.readthedocs.io/en/latest/"
homepage = "https://github.com/ttimbers/partypy_tt"
repository = "https://github.com/ttimbers/partypy_tt"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
pandas = "^1.3.1"
altair = "^4.1.0"
altair-viewer = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Sphinx = "^4.1.2"
nbsphinx = "^0.8.7"
ipykernel = "^6.0.3"
sphinx-autoapi = "^1.8.3"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
